cargo-public-api/tests/snapshots/cargo_public_api_bin_tests__lint_error_list.snap
---
source: cargo-public-api/tests/cargo-public-api-bin-tests.rs
expression: stdout
---
pub mod lint_error
pub use lint_error::example_api
pub struct lint_error::MissingDocs
