cargo-public-api/tests/snapshots/cargo_public_api_bin_tests__omit-auto-derived-impls-with-triple-s.snap
---
source: cargo-public-api/tests/cargo-public-api-bin-tests.rs
expression: stdout
---
pub mod example_api
#[non_exhaustive] pub struct example_api::Struct
pub example_api::Struct::v1_field: usize
pub example_api::Struct::v2_field: usize
pub struct example_api::StructV2
pub example_api::StructV2::field: usize
