cargo-public-api/tests/snapshots/cargo_public_api_bin_tests__short-completions-help.snap
---
source: cargo-public-api/tests/cargo-public-api-bin-tests.rs
expression: stdout
---
Generate completion scripts for many different shells.

Usage: cargo public-api completions [OPTIONS] <SHELL>

Arguments:
  <SHELL>  [possible values: bash, elvish, fig, fish, nushell, powershell, zsh]

Options:
      --manifest-path <PATH>  Path to `Cargo.toml` [default: Cargo.toml]
  -p, --package <PACKAGE>     Name of package in workspace to list or diff the public API for
  -s, --simplified...         Omit noisy items. Can be used more than once.
      --omit <OMIT>           Omit specified items [possible values: blanket-impls,
                              auto-trait-impls, auto-derived-impls]
  -F, --features <FEATURES>   Space or comma separated list of features to activate
      --all-features          Activate all available features
      --no-default-features   Do not activate the `default` feature
      --target <TARGET>       Build for the target triple
      --color [<COLOR>]       When to color the output [possible values: auto, never, always]
  -h, --help                  Print help (see more with '--help')
