cargo-public-api/tests/snapshots/cargo_public_api_bin_tests__specific-crate.snap
---
source: cargo-public-api/tests/cargo-public-api-bin-tests.rs
expression: stdout
---
pub mod specific_crate
pub struct specific_crate::SpecificCrate
